Bug 389766 - "Hard-to-understand presentation of protocol-handlers on Linux" [p=ventnor.bugzilla@yahoo.com.au (Michael Ventnor) r+sr=biesi a=blocking-firefox3+]